# microblocks-zephyr

./: .gitlab-ci.yml  CMakeLists.txt  Kconfig  README.md  os_list.json  prj.conf  west.yml  west_base.yml  west_dev.yml  west_pilot.yml  west_stable.yml
.github/workflows/: cd.yml  pr.yml  release.yml
boards/: beagleconnect_freedom.overlay
scripts/: os_list.json
src/: log_backend.c  main.c
